tests/sumo/basic/person/errors/trainStop_car_disconnected/errors.sumo
Error: Disconnected plan for person 'person0' (edge 'b' != edge 'a').
Quitting (on error).
